--- a/templates/kill_instance.j2
+++ b/templates/kill_instance.j2
@@ -2,7 +2,7 @@
 # Name:		kill_instance.{{ instance_name }}.sh
 # Author:	Rodney Marable <rodney.marable@gmail.com>
 # Created On:	June 3, 2019
-# Last Changed:	July 17, 2019
+# Last Changed:	July 29, 2019
 # Deployed On:	{{ lookup('pipe','date \"+%B %-d, %Y\"') }}
 # Purpose:	Destroy EC2 instance {{ instance_name }}
 ###############################################################################
@@ -164,12 +164,12 @@ echo "Published instance family termination message:"
 aws sns publish --topic-arn $SNS_TOPIC_ARN --subject "[Ec2InstanceMaker] Instance Family Termination Notice" --message "EC2 instance family {{ instance_name }} was terminated on `date +%Y-%m-%d` at `date +%H:%M.`"
 {% else %}
 echo "Published instance termination message:"
-aws sns publish --topic-arn $SNS_TOPIC_ARN --subject "[Ec2InstanceMaker] Instance Termination Notice" --message "EC2 instance {{ instance_name }} was terminated on `date +%Y-%m-%d` at `date +%H:%M.`  There were {{ count }} instances terminated in this family."
+aws --region {{ region }} sns publish --topic-arn $SNS_TOPIC_ARN --subject "[Ec2InstanceMaker] Instance Termination Notice" --message "EC2 instance {{ instance_name }} was terminated on `date +%Y-%m-%d` at `date +%H:%M.`  There were {{ count }} instances terminated in this family."
 {% endif %}
 
 # Delete the SNS topic.
 
-aws sns delete-topic --topic-arn $SNS_TOPIC_ARN
+aws --region {{ region }} sns delete-topic --topic-arn $SNS_TOPIC_ARN
 echo "Deleted SNS topic: $SNS_TOPIC_ARN"
 echo ""
 {% if preserve_iam_role == 'false' %}
